Reuse Object member population for arrays, only replacing the content field